<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="all_time_stats">Your all time statistics</string>
    <string name="Instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="welcome">Welcome</string>
    <string name="player">You</string>
    <string name="computer">Computer</string>
    <string name="v_s">V.S.</string>
    <string name="statistics">stats</string>
    <string name="scissors">Scissors</string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="player_choice">Players\'s choice</string>
    <string name="computer_choice">Computer\'s choice</string>
    <string name="game_result">Game result</string>
    <string name="date_time">Date and Time</string>
    <string name="draw">It\'s a draw!</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
</resources>